--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,13 +52,13 @@ jobs:
           fi
           echo "All files are correctly formatted."
 
-      - name: Run linter (golangci-lint)
-        uses: golangci/golangci-lint-action@v9
+      # - name: Run linter (golangci-lint)
+      #   uses: golangci/golangci-lint-action@v9
 
-      - name: Run vulnerability scan (govulncheck)
-        uses: golang/govulncheck-action@v1
-        with:
-          go-version: ${{ matrix.go-version }}
+      # - name: Run vulnerability scan (govulncheck)
+      #   uses: golang/govulncheck-action@v1
+      #   with:
+      #     go-version: ${{ matrix.go-version }}
 
       - name: Debug FS
         run: ls -R ui
