--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Install and run golangci-lint
         run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.61.0
+          go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
           golangci-lint run ./...
           ls -R ui/dist
 
