--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,10 +58,10 @@ jobs:
           golangci-lint run ./...
           ls -R ui/dist
 
-      - name: Run vulnerability scan (govulncheck)
-        uses: golang/govulncheck-action@v1
-        with:
-          go-version: ${{ matrix.go-version }}
+      # - name: Run vulnerability scan (govulncheck)
+      #   uses: golang/govulncheck-action@v1
+      #   with:
+      #     go-version: ${{ matrix.go-version }}
 
       - name: Debug FS
         run: ls -R ui
