--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,19 +52,15 @@ jobs:
           fi
           echo "All files are correctly formatted."
 
-      - name: Install and run golangci-lint
+      - name: Run linter (golangci-lint)
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.61
+
+      - name: Run vulnerability scan (govulncheck)
         run: |
-          go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
-          golangci-lint run ./...
-          ls -R ui/dist
-
-      # - name: Run vulnerability scan (govulncheck)
-      #   uses: golang/govulncheck-action@v1
-      #   with:
-      #     go-version: ${{ matrix.go-version }}
-
-      - name: Debug FS
-        run: ls -R ui
+          go install golang.org/x/vuln/cmd/govulncheck@latest
+          govulncheck ./...
 
       - name: Run tests
         run: go test -v ./...
