--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,6 +29,18 @@ jobs:
           go-version: ${{ matrix.go-version }}
           cache: true # Enables Go's build cache
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: '24'
+
+      - name: Build Frontend
+        run: |
+          cd ui
+          npm ci
+          npm run build
+          ls -R dist
+
       - name: Check formatting (gofmt)
         run: |
           echo "Checking formatting..."
@@ -44,9 +56,9 @@ jobs:
         uses: golangci/golangci-lint-action@v9
 
       - name: Run vulnerability scan (govulncheck)
-        uses: golang/govulncheck-action@v1
-        with:
-          go-version: ${{ matrix.go-version }}
+        run: |
+          go install golang.org/x/vuln/cmd/govulncheck@latest
+          govulncheck ./...
 
       - name: Run tests
         run: go test -v ./...
