--- a/ui/package.json
+++ b/ui/package.json
@@ -17,13 +17,14 @@
     "postcss": "^8.5.6",
     "svelte": "^5.43.8",
     "svelte-check": "^4.3.4",
-    "tailwindcss": "^3.4.18",
+    "tailwindcss": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.9.3",
     "vite": "^7.2.4"
   },
   "dependencies": {
     "@lucide/svelte": "^0.556.0",
+    "@tailwindcss/vite": "^4.0.0",
     "bits-ui": "^2.14.4",
     "clsx": "^2.1.1",
     "mode-watcher": "^1.1.0",
