--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        go-version: [ '1.25', '1.24' ]
+        go-version: [ '1.25.5', '1.24.11' ]
 
     steps:
       - name: Checkout code
@@ -29,16 +29,23 @@ jobs:
           go-version: ${{ matrix.go-version }}
           cache: true # Enables Go's build cache
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
       - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
           node-version: '24'
+          cache: 'pnpm'
+          cache-dependency-path: ui/pnpm-lock.yaml
 
       - name: Build Frontend
         run: |
           cd ui
-          npm ci
-          npm run build
+          pnpm install --frozen-lockfile
+          pnpm run build
           ls -R dist
 
       - name: Check formatting (gofmt)
