--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,6 +45,7 @@ jobs:
         run: |
           cd ui
           pnpm install --frozen-lockfile
+          pnpm run test
           pnpm run build
           ls -R dist
 
