--- a/ui/package.json
+++ b/ui/package.json
@@ -11,9 +11,11 @@
     "test": "vitest"
   },
   "devDependencies": {
+    "@internationalized/date": "^3.8.1",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/svelte": "^5.2.9",
+    "@testing-library/user-event": "^14.6.1",
     "@tsconfig/svelte": "^5.0.6",
     "@types/node": "^24.10.1",
     "autoprefixer": "^10.4.22",
