--- a/ui/package.json
+++ b/ui/package.json
@@ -4,36 +4,47 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json",
-    "test": "vitest"
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "test": "vitest run",
+    "test-ui": "vitest --ui"
   },
   "devDependencies": {
     "@internationalized/date": "^3.8.1",
+    "@lucide/svelte": "^0.544.0",
+    "@sveltejs/adapter-auto": "^7.0.0",
+    "@sveltejs/adapter-static": "^3.0.10",
+    "@sveltejs/kit": "^2.49.2",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/svelte": "^5.2.9",
     "@testing-library/user-event": "^14.6.1",
     "@tsconfig/svelte": "^5.0.6",
     "@types/node": "^24.10.1",
+    "@vitest/ui": "4.0.15",
     "autoprefixer": "^10.4.22",
+    "formsnap": "^2.0.1",
     "jsdom": "^27.2.0",
     "postcss": "^8.5.6",
     "svelte": "^5.43.8",
     "svelte-check": "^4.3.4",
+    "svelte-sonner": "^1.0.5",
+    "sveltekit-superforms": "^2.26.1",
     "tailwindcss": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
-    "vitest": "^4.0.15"
+    "vitest": "^4.0.15",
+    "zod": "^3.24.1"
   },
   "dependencies": {
-    "@lucide/svelte": "^0.556.0",
     "@tailwindcss/vite": "^4.0.0",
     "bits-ui": "^2.14.4",
     "clsx": "^2.1.1",
+    "lucide-svelte": "^0.560.0",
     "mode-watcher": "^1.1.0",
     "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.2.2"
